src/syntax/parser.rs
//! Parser for the Neap language
//!
//! Transforms a token stream into an Abstract Syntax Tree using
//! recursive descent parsing with Pratt parsing for operators.

use super::ast::*;
use super::lexer::{Lexer, LexerError};
use super::span::{Span, Spanned};
use super::token::{Token, TokenKind};
use thiserror::Error;

/// Errors that can occur during parsing.
#[derive(Debug, Clone, Error, PartialEq)]
pub enum ParseError {
    /// Lexer error during tokenization
    #[error("lexer error: {0}")]
    LexerError(#[from] LexerError),

    /// Unexpected token
    #[error("unexpected token: expected {expected}, found {found} at {span:?}")]
    UnexpectedToken {
        expected: String,
        found: String,
        span: Span,
    },

    /// Unexpected end of file
    #[error("unexpected end of file: expected {expected}")]
    UnexpectedEof { expected: String },

    /// Invalid pattern
    #[error("invalid pattern at {span:?}")]
    InvalidPattern { span: Span },

    /// Invalid expression
    #[error("invalid expression at {span:?}")]
    InvalidExpression { span: Span },
}

/// The Neap parser.
///
/// Parses a token stream into an AST.
pub struct Parser {
    /// The tokens to parse
    tokens: Vec<Token>,
    /// Current position in the token stream
    pos: usize,
}

impl Parser {
    /// Create a new parser from source code.
    pub fn new(source: &str) -> Result<Self, ParseError> {
        let tokens = Lexer::tokenize(source)?;
        Ok(Self { tokens, pos: 0 })
    }

    /// Create a parser from a pre-tokenized stream.
    #[must_use]
    pub fn from_tokens(tokens: Vec<Token>) -> Self {
        Self { tokens, pos: 0 }
    }

    /// Parse the entire source into a program.
    pub fn parse_program(&mut self) -> Result<Program, ParseError> {
        let mut decls = Vec::new();

        while !self.is_at_end() {
            let decl = self.parse_decl()?;
            decls.push(decl);
        }

        Ok(Program::with_decls(decls))
    }

    /// Parse a single expression (for REPL/testing).
    pub fn parse_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        self.parse_expr_bp(0)
    }

    /// Parse a single pattern (for testing).
    pub fn parse_pattern(&mut self) -> Result<Spanned<Pattern>, ParseError> {
        self.parse_pattern_inner()
    }

    /// Parse a single type expression (for testing).
    pub fn parse_type(&mut self) -> Result<Spanned<TypeExpr>, ParseError> {
        self.parse_type_expr()
    }

    /// Check if the parser has consumed all input.
    pub fn is_at_end(&self) -> bool {
        matches!(self.peek_kind(), None | Some(TokenKind::Eof))
    }

    // ========== Declaration Parsing ==========

    /// Parse a single declaration.
    pub fn parse_decl(&mut self) -> Result<Spanned<Decl>, ParseError> {
        match self.peek_kind() {
            Some(TokenKind::Let) => self.parse_let_decl(),
            Some(TokenKind::Fun) => self.parse_fun_decl(),
            Some(TokenKind::Type) => self.parse_type_decl(),
            Some(TokenKind::Datatype) => self.parse_datatype_decl(),
            Some(TokenKind::Trait) => self.parse_trait_decl(),
            Some(TokenKind::Impl) => self.parse_impl_decl(),
            Some(_) => {
                let token = self.peek().unwrap();
                Err(ParseError::UnexpectedToken {
                    expected: "declaration (let, fun, type, datatype, trait, or impl)"
                        .to_string(),
                    found: token.kind.name().to_string(),
                    span: token.span,
                })
            }
            None => Err(ParseError::UnexpectedEof {
                expected: "declaration".to_string(),
            }),
        }
    }

    fn parse_let_decl(&mut self) -> Result<Spanned<Decl>, ParseError> {
        let start = self.expect(TokenKind::Let)?.span;

        let rec = self.eat(TokenKind::Rec);

        let pattern = self.parse_pattern()?;

        let ty = if self.eat(TokenKind::Colon) {
            Some(self.parse_type()?)
        } else {
            None
        };

        self.expect(TokenKind::Eq)?;
        let expr = self.parse_expr()?;

        let span = start.merge(expr.span);
        Ok(Spanned::new(
            Decl::Val(ValDecl {
                rec,
                pattern,
                ty,
                expr,
            }),
            span,
        ))
    }

    fn parse_fun_decl(&mut self) -> Result<Spanned<Decl>, ParseError> {
        let start = self.expect(TokenKind::Fun)?.span;
        let name = self.expect_ident()?;

        let mut clauses = Vec::new();
        clauses.push(self.parse_fun_clause()?);

        // Parse additional clauses with |
        while self.eat(TokenKind::Bar) {
            // Expect the function name again
            let clause_name = self.expect_ident()?;
            if clause_name.value != name.value {
                return Err(ParseError::UnexpectedToken {
                    expected: format!("function name '{}'", name.value),
                    found: clause_name.value,
                    span: clause_name.span,
                });
            }
            clauses.push(self.parse_fun_clause()?);
        }

        let end_span = clauses.last().map(|c| c.body.span).unwrap_or(name.span);
        let span = start.merge(end_span);

        Ok(Spanned::new(
            Decl::Fun(FunDecl { name, clauses }),
            span,
        ))
    }

    fn parse_fun_clause(&mut self) -> Result<FunClause, ParseError> {
        let mut params = Vec::new();

        // Parse parameters until we hit = or :
        while !matches!(self.peek_kind(), Some(TokenKind::Eq) | Some(TokenKind::Colon) | None) {
            params.push(self.parse_atomic_pattern()?);
        }

        let result_ty = if self.eat(TokenKind::Colon) {
            Some(self.parse_type()?)
        } else {
            None
        };

        self.expect(TokenKind::Eq)?;
        let body = self.parse_expr()?;

        Ok(FunClause {
            params,
            result_ty,
            body,
        })
    }

    fn parse_type_decl(&mut self) -> Result<Spanned<Decl>, ParseError> {
        let start = self.expect(TokenKind::Type)?.span;

        let mut params = Vec::new();

        // Parse type parameters
        while let Some(TokenKind::TyVar(name)) = self.peek_kind().cloned() {
            let span = self.advance().span;
            params.push(Spanned::new(name, span));
        }

        let name = self.expect_ident()?;
        self.expect(TokenKind::Eq)?;
        let ty = self.parse_type()?;

        let span = start.merge(ty.span);
        Ok(Spanned::new(
            Decl::Type(TypeDecl { params, name, ty }),
            span,
        ))
    }

    fn parse_datatype_decl(&mut self) -> Result<Spanned<Decl>, ParseError> {
        let start = self.expect(TokenKind::Datatype)?.span;

        let mut params = Vec::new();

        // Parse type parameters
        while let Some(TokenKind::TyVar(name)) = self.peek_kind().cloned() {
            let span = self.advance().span;
            params.push(Spanned::new(name, span));
        }

        let name = self.expect_ident()?;
        self.expect(TokenKind::Eq)?;

        // Optional leading |
        self.eat(TokenKind::Bar);

        let mut constructors = Vec::new();
        constructors.push(self.parse_constructor()?);

        while self.eat(TokenKind::Bar) {
            constructors.push(self.parse_constructor()?);
        }

        let end_span = constructors
            .last()
            .map(|c| c.arg.as_ref().map(|a| a.span).unwrap_or(c.name.span))
            .unwrap_or(name.span);
        let span = start.merge(end_span);

        Ok(Spanned::new(
            Decl::Datatype(DatatypeDecl {
                params,
                name,
                constructors,
            }),
            span,
        ))
    }

    fn parse_constructor(&mut self) -> Result<Constructor, ParseError> {
        let name = self.expect_upper_ident()?;

        let arg = if self.eat(TokenKind::Of) {
            Some(self.parse_type()?)
        } else {
            None
        };

        Ok(Constructor { name, arg })
    }

    /// Parse a trait declaration.
    ///
    /// Syntax: `trait Name { fn method(self) -> Type ... }`
    fn parse_trait_decl(&mut self) -> Result<Spanned<Decl>, ParseError> {
        let start = self.expect(TokenKind::Trait)?.span;
        let name = self.expect_upper_ident()?;

        self.expect(TokenKind::LBrace)?;

        let mut methods = Vec::new();

        // Parse method signatures until we hit }
        while !matches!(self.peek_kind(), Some(TokenKind::RBrace)) && !self.is_at_end() {
            methods.push(self.parse_method_sig()?);
        }

        let end = self.expect(TokenKind::RBrace)?.span;
        let span = start.merge(end);

        // The type parameter is implicit "self" for now
        let type_param = Spanned::new("self".to_string(), name.span);

        Ok(Spanned::new(
            Decl::Trait(TraitDecl {
                name,
                type_param,
                methods,
            }),
            span,
        ))
    }

    /// Parse a method signature in a trait.
    ///
    /// Syntax: `fn name(param1, param2, ...) -> ReturnType`
    fn parse_method_sig(&mut self) -> Result<MethodSig, ParseError> {
        self.expect(TokenKind::Fn)?;
        let name = self.expect_ident()?;

        self.expect(TokenKind::LParen)?;

        let mut params = Vec::new();

        // Parse parameters (comma-separated identifiers)
        if !matches!(self.peek_kind(), Some(TokenKind::RParen)) {
            params.push(self.expect_ident()?);
            while self.eat(TokenKind::Comma) {
                params.push(self.expect_ident()?);
            }
        }

        self.expect(TokenKind::RParen)?;
        self.expect(TokenKind::Arrow)?;

        let return_ty = self.parse_type()?;

        Ok(MethodSig {
            name,
            params,
            return_ty,
        })
    }

    /// Parse an impl declaration.
    ///
    /// Syntax: `impl TraitName for Type { fn method(param) = expr ... }`
    fn parse_impl_decl(&mut self) -> Result<Spanned<Decl>, ParseError> {
        let start = self.expect(TokenKind::Impl)?.span;
        let trait_name = self.expect_upper_ident()?;

        self.expect(TokenKind::For)?;
        let for_type = self.parse_type()?;

        self.expect(TokenKind::LBrace)?;

        let mut methods = Vec::new();

        // Parse method implementations until we hit }
        while !matches!(self.peek_kind(), Some(TokenKind::RBrace)) && !self.is_at_end() {
            methods.push(self.parse_method_impl()?);
        }

        let end = self.expect(TokenKind::RBrace)?.span;
        let span = start.merge(end);

        Ok(Spanned::new(
            Decl::Impl(ImplDecl {
                trait_name,
                for_type,
                methods,
            }),
            span,
        ))
    }

    /// Parse a method implementation in an impl block.
    ///
    /// Syntax: `fn name(param1, param2, ...) = expr`
    /// or: `fn name(param1, param2, ...) -> ReturnType = expr`
    fn parse_method_impl(&mut self) -> Result<MethodImpl, ParseError> {
        self.expect(TokenKind::Fn)?;
        let name = self.expect_ident()?;

        self.expect(TokenKind::LParen)?;

        let mut params = Vec::new();

        // Parse parameters (comma-separated identifiers)
        if !matches!(self.peek_kind(), Some(TokenKind::RParen)) {
            params.push(self.expect_ident()?);
            while self.eat(TokenKind::Comma) {
                params.push(self.expect_ident()?);
            }
        }

        self.expect(TokenKind::RParen)?;

        // Optional return type annotation
        let return_ty = if self.eat(TokenKind::Arrow) {
            Some(self.parse_type()?)
        } else {
            None
        };

        self.expect(TokenKind::Eq)?;
        let body = self.parse_expr()?;

        Ok(MethodImpl {
            name,
            params,
            return_ty,
            body,
        })
    }

    // ========== Expression Parsing (Pratt Parser) ==========

    /// Parse an expression with the given minimum binding power.
    fn parse_expr_bp(&mut self, min_bp: u8) -> Result<Spanned<Expr>, ParseError> {
        let mut lhs = self.parse_prefix_expr()?;

        loop {
            let op = match self.peek_kind() {
                None | Some(TokenKind::Eof) => break,
                Some(kind) => kind.clone(),
            };

            // Check for postfix operators (function application)
            if let Some((l_bp, ())) = postfix_binding_power(&op) {
                if l_bp < min_bp {
                    break;
                }

                lhs = self.parse_postfix_expr(lhs)?;
                continue;
            }

            // Check for infix operators
            if let Some((l_bp, r_bp)) = infix_binding_power(&op) {
                if l_bp < min_bp {
                    break;
                }

                lhs = self.parse_infix_expr(lhs, r_bp)?;
                continue;
            }

            break;
        }

        Ok(lhs)
    }

    fn parse_prefix_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        match self.peek_kind().cloned() {
            // Unary minus
            Some(TokenKind::Minus) => {
                let op_token = self.advance();
                let ((), r_bp) = prefix_binding_power(&TokenKind::Minus);
                let operand = self.parse_expr_bp(r_bp)?;
                let span = op_token.span.merge(operand.span);
                Ok(Spanned::new(
                    Expr::UnOp(UnOp::Neg, Box::new(operand)),
                    span,
                ))
            }

            // Logical not
            Some(TokenKind::Bang) => {
                let op_token = self.advance();
                let ((), r_bp) = prefix_binding_power(&TokenKind::Bang);
                let operand = self.parse_expr_bp(r_bp)?;
                let span = op_token.span.merge(operand.span);
                Ok(Spanned::new(
                    Expr::UnOp(UnOp::Not, Box::new(operand)),
                    span,
                ))
            }

            // Let expression
            Some(TokenKind::Let) => self.parse_let_expr(),

            // Lambda
            Some(TokenKind::Fn) => self.parse_lambda(),

            // Conditional
            Some(TokenKind::If) => self.parse_if_expr(),

            // Match expression
            Some(TokenKind::Match) => self.parse_match_expr(),

            // Case expression (alternative syntax)
            Some(TokenKind::Case) => self.parse_case_expr(),

            // Do block
            Some(TokenKind::Do) => self.parse_do_expr(),

            // Atomic expressions
            _ => self.parse_atomic_expr(),
        }
    }

    fn parse_atomic_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        match self.peek_kind().cloned() {
            // Literals
            Some(TokenKind::Int(n)) => {
                let token = self.advance();
                Ok(Spanned::new(Expr::Lit(Literal::Int(n)), token.span))
            }

            Some(TokenKind::Float(f)) => {
                let token = self.advance();
                Ok(Spanned::new(Expr::Lit(Literal::Float(f)), token.span))
            }

            Some(TokenKind::String(s)) => {
                let token = self.advance();
                Ok(Spanned::new(Expr::Lit(Literal::String(s)), token.span))
            }

            Some(TokenKind::Char(c)) => {
                let token = self.advance();
                Ok(Spanned::new(Expr::Lit(Literal::Char(c)), token.span))
            }

            Some(TokenKind::True) => {
                let token = self.advance();
                Ok(Spanned::new(Expr::Lit(Literal::Bool(true)), token.span))
            }

            Some(TokenKind::False) => {
                let token = self.advance();
                Ok(Spanned::new(Expr::Lit(Literal::Bool(false)), token.span))
            }

            // Variables
            Some(TokenKind::Ident(name)) => {
                let token = self.advance();
                Ok(Spanned::new(Expr::Var(name), token.span))
            }

            // Constructors
            Some(TokenKind::UpperIdent(name)) => {
                let token = self.advance();
                Ok(Spanned::new(Expr::Con(name), token.span))
            }

            // Environment variables (accept both ident and upper ident for $HOME, $PATH, etc.)
            Some(TokenKind::Dollar) => {
                let start = self.advance().span;
                let name = self.expect_any_ident()?;
                let span = start.merge(name.span);
                Ok(Spanned::new(Expr::EnvVar(name.value), span))
            }

            // Parenthesized expression, tuple, or unit
            Some(TokenKind::LParen) => self.parse_paren_expr(),

            // List
            Some(TokenKind::LBracket) => self.parse_list_expr(),

            // Record
            Some(TokenKind::LBrace) => self.parse_record_expr(),

            // Shell command
            Some(TokenKind::Backtick) => self.parse_command_expr(),

            Some(_) => {
                let token = self.peek().unwrap();
                Err(ParseError::InvalidExpression { span: token.span })
            }

            None => Err(ParseError::UnexpectedEof {
                expected: "expression".to_string(),
            }),
        }
    }

    fn parse_paren_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::LParen)?.span;

        // Unit: ()
        if self.eat(TokenKind::RParen) {
            return Ok(Spanned::new(Expr::Unit, start.merge(Span::new(start.end, start.end + 1))));
        }

        let first = self.parse_expr()?;

        // Tuple: (e1, e2, ...)
        if self.eat(TokenKind::Comma) {
            let mut elements = vec![first];
            elements.push(self.parse_expr()?);

            while self.eat(TokenKind::Comma) {
                elements.push(self.parse_expr()?);
            }

            let end = self.expect(TokenKind::RParen)?.span;
            return Ok(Spanned::new(Expr::Tuple(elements), start.merge(end)));
        }

        // Parenthesized expression
        let end = self.expect(TokenKind::RParen)?.span;
        Ok(Spanned::new(first.value, start.merge(end)))
    }

    fn parse_list_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::LBracket)?.span;

        // Empty list: []
        if self.eat(TokenKind::RBracket) {
            return Ok(Spanned::new(Expr::List(vec![]), start.merge(Span::new(start.end, start.end + 1))));
        }

        let mut elements = vec![self.parse_expr()?];

        while self.eat(TokenKind::Comma) {
            elements.push(self.parse_expr()?);
        }

        let end = self.expect(TokenKind::RBracket)?.span;
        Ok(Spanned::new(Expr::List(elements), start.merge(end)))
    }

    fn parse_record_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::LBrace)?.span;

        // Empty record: {}
        if self.eat(TokenKind::RBrace) {
            return Ok(Spanned::new(Expr::Record(vec![]), start.merge(Span::new(start.end, start.end + 1))));
        }

        let mut fields = Vec::new();
        fields.push(self.parse_record_field()?);

        while self.eat(TokenKind::Comma) {
            fields.push(self.parse_record_field()?);
        }

        let end = self.expect(TokenKind::RBrace)?.span;
        Ok(Spanned::new(Expr::Record(fields), start.merge(end)))
    }

    fn parse_record_field(&mut self) -> Result<(Spanned<String>, Spanned<Expr>), ParseError> {
        let name = self.expect_ident()?;
        self.expect(TokenKind::Eq)?;
        let value = self.parse_expr()?;
        Ok((name, value))
    }

    /// Parse a shell command expression: `` `command {interpolation} more` ``
    fn parse_command_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        use crate::syntax::ast::CommandPart;

        let start = self.expect(TokenKind::Backtick)?.span;
        let mut parts = Vec::new();

        loop {
            match self.peek_kind().cloned() {
                Some(TokenKind::Backtick) => {
                    // End of command
                    let end = self.advance().span;
                    return Ok(Spanned::new(Expr::Command(parts), start.merge(end)));
                }

                Some(TokenKind::CommandText(text)) => {
                    // Literal command text
                    self.advance();
                    if !text.is_empty() {
                        parts.push(CommandPart::Literal(text));
                    }
                }

                Some(TokenKind::LBrace) => {
                    // Start of interpolation
                    self.advance();
                    let expr = self.parse_expr()?;
                    self.expect(TokenKind::RBrace)?;
                    parts.push(CommandPart::Interpolation(Box::new(expr)));
                }

                Some(TokenKind::Eof) | None => {
                    return Err(ParseError::UnexpectedEof {
                        expected: "closing backtick".to_string(),
                    });
                }

                Some(_) => {
                    // This shouldn't happen if the lexer is working correctly
                    let token = self.peek().unwrap();
                    return Err(ParseError::UnexpectedToken {
                        expected: "command text, interpolation, or closing backtick".to_string(),
                        found: token.kind.name().to_string(),
                        span: token.span,
                    });
                }
            }
        }
    }

    fn parse_let_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::Let)?.span;
        let rec = self.eat(TokenKind::Rec);

        let pattern = self.parse_pattern()?;

        let ty = if self.eat(TokenKind::Colon) {
            Some(Box::new(self.parse_type()?))
        } else {
            None
        };

        self.expect(TokenKind::Eq)?;
        let value = self.parse_expr()?;

        self.expect(TokenKind::In)?;
        let body = self.parse_expr()?;

        let span = start.merge(body.span);
        Ok(Spanned::new(
            Expr::Let {
                rec,
                pattern: Box::new(pattern),
                ty,
                value: Box::new(value),
                body: Box::new(body),
            },
            span,
        ))
    }

    fn parse_lambda(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::Fn)?.span;

        let mut params = Vec::new();
        while !matches!(self.peek_kind(), Some(TokenKind::FatArrow) | None) {
            params.push(self.parse_atomic_pattern()?);
        }

        self.expect(TokenKind::FatArrow)?;
        let body = self.parse_expr()?;

        let span = start.merge(body.span);
        Ok(Spanned::new(
            Expr::Lambda(params, Box::new(body)),
            span,
        ))
    }

    fn parse_if_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::If)?.span;
        let cond = self.parse_expr()?;

        self.expect(TokenKind::Then)?;
        let then_branch = self.parse_expr()?;

        self.expect(TokenKind::Else)?;
        let else_branch = self.parse_expr()?;

        let span = start.merge(else_branch.span);
        Ok(Spanned::new(
            Expr::If(
                Box::new(cond),
                Box::new(then_branch),
                Box::new(else_branch),
            ),
            span,
        ))
    }

    fn parse_match_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::Match)?.span;
        let scrutinee = self.parse_expr()?;

        self.expect(TokenKind::With)?;

        // Optional leading |
        self.eat(TokenKind::Bar);

        let mut arms = Vec::new();
        arms.push(self.parse_match_arm()?);

        while self.eat(TokenKind::Bar) {
            arms.push(self.parse_match_arm()?);
        }

        let end_span = arms.last().map(|a| a.body.span).unwrap_or(start);
        let span = start.merge(end_span);

        Ok(Spanned::new(
            Expr::Match(Box::new(scrutinee), arms),
            span,
        ))
    }

    fn parse_case_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::Case)?.span;
        let scrutinee = self.parse_expr()?;

        self.expect(TokenKind::Of)?;

        // Optional leading |
        self.eat(TokenKind::Bar);

        let mut arms = Vec::new();
        arms.push(self.parse_match_arm()?);

        while self.eat(TokenKind::Bar) {
            arms.push(self.parse_match_arm()?);
        }

        let end_span = arms.last().map(|a| a.body.span).unwrap_or(start);
        let span = start.merge(end_span);

        Ok(Spanned::new(
            Expr::Match(Box::new(scrutinee), arms),
            span,
        ))
    }

    fn parse_match_arm(&mut self) -> Result<MatchArm, ParseError> {
        let pattern = self.parse_pattern()?;

        // TODO: Parse guards with 'when'
        let guard = None;

        self.expect(TokenKind::Arrow)?;
        let body = self.parse_expr()?;

        Ok(MatchArm {
            pattern,
            guard,
            body,
        })
    }

    fn parse_do_expr(&mut self) -> Result<Spanned<Expr>, ParseError> {
        let start = self.expect(TokenKind::Do)?.span;

        let mut stmts = Vec::new();

        while !matches!(self.peek_kind(), Some(TokenKind::End) | None) {
            stmts.push(self.parse_do_stmt()?);
            // Optional semicolon
            self.eat(TokenKind::Semi);
        }

        let end = self.expect(TokenKind::End)?.span;
        Ok(Spanned::new(Expr::Do(stmts), start.merge(end)))
    }

    fn parse_do_stmt(&mut self) -> Result<DoStmt, ParseError> {
        // Check for let binding
        if self.eat(TokenKind::Let) {
            let pattern = self.parse_pattern()?;
            self.expect(TokenKind::Eq)?;
            let expr = self.parse_expr()?;
            return Ok(DoStmt::Let(pattern, expr));
        }

        // Parse expression, then check for <- (bind)
        let expr = self.parse_expr()?;

        if self.eat(TokenKind::LeftArrow) {
            // This was actually a pattern
            let pattern = self.expr_to_pattern(&expr)?;
            let rhs = self.parse_expr()?;
            return Ok(DoStmt::Bind(pattern, rhs));
        }

        Ok(DoStmt::Expr(expr))
    }

    fn parse_postfix_expr(&mut self, lhs: Spanned<Expr>) -> Result<Spanned<Expr>, ParseError> {
        // Function application
        if self.peek_kind().is_some_and(can_start_atom) {
            let arg = self.parse_atomic_expr()?;
            let span = lhs.span.merge(arg.span);
            return Ok(Spanned::new(
                Expr::App(Box::new(lhs), Box::new(arg)),
                span,
            ));
        }

        // Record field access
        if self.eat(TokenKind::Dot) {
            let field = self.expect_ident()?;
            let span = lhs.span.merge(field.span);
            return Ok(Spanned::new(
                Expr::Field(Box::new(lhs), field),
                span,
            ));
        }

        Ok(lhs)
    }

    fn parse_infix_expr(
        &mut self,
        lhs: Spanned<Expr>,
        r_bp: u8,
    ) -> Result<Spanned<Expr>, ParseError> {
        let op_token = self.advance();
